--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ plugins {
 }
 
 version = "1.0"
-group = "dev.asbyth"
-archivesBaseName = "ForgeTemplate"
+group = "io.github.dediamondpro"
+archivesBaseName = "AutoUpdater"
 
 sourceCompatibility = targetCompatibility = 1.8
 compileJava.options.encoding = 'UTF-8'
@@ -19,16 +19,10 @@ minecraft {
 }
 
 configurations {
-    // Creates an extra configuration that implements `implementation` to be used later as the configuration that shades libraries
-    include
     implementation.extendsFrom(include)
 }
 
 dependencies {
-    // How to normally add a dependency (If you don't want it to be added to the jar)
-    // implementation "com.example:example:1.0.0"
-    // If you would like to include it (have the library inside your jar) instead use
-    // include "com.example:example:1.0.0"
 }
 
 /**
@@ -65,6 +59,16 @@ task moveResources {
 
 moveResources.dependsOn processResources
 classes.dependsOn moveResources
+
+jar {
+    enabled = false
+    manifest.attributes(
+            "ModSide": "CLIENT",
+            "FMLCorePlugin": "io.github.dediamondpro.autoupdater.tweaker.FMLLoadingPlugin",
+            "FMLCorePluginContainsFMLMod": "no yes",
+            "ForceLoadAsMod": true
+    )
+}
 
 // This adds support to ("embed", "shade", "include") libraries into our JAR
 shadowJar {
